@@ -1,3 +1,9 @@
+2011-02-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+	* godmode/users/configure_profile.php: Added some variable initialization after
+	selecting a defined profile.
+
+	Fixes: #3182041
+
 2011-02-14 Miguel de Dios  <miguel.dedios@artica.es>
 	
 	Merged bugfix from trunk
